--- a/vmnotify.conf
+++ b/vmnotify.conf
@@ -5,6 +5,6 @@ LOGFILE="/tmp/vmnotify.log"
 VERBOSE=""
 SIPSAK=`which sipsak`
 UUIDGEN=`which uuidgen`
-SIPFILE="/etc/sipwise-vmnotify/mwi.sip"
+SIPFILE="/etc/ngcp-vmnotify/mwi.sip"
 
 
