make lintian happy (MfT)

--- a/debian/control
+++ b/debian/control
@@ -1,13 +1,13 @@
 Source: ngcp-vmnotify
 Section: utils
 Priority: extra
-Maintainer: Jon Bonilla <jbonilla@sipwise.com>
+Maintainer: Sipwise Development Team <support@sipwise.com>
 Build-Depends: debhelper (>= 5)
-Standards-Version: 3.8.4
+Standards-Version: 3.9.2
 Homepage: http://sipwise.com/
 
 Package: ngcp-vmnotify
 Architecture: all
-Depends: ${shlibs:Depends}, ${misc:Depends}, ngcp-sipsak, bash, uuid-runtime
+Depends: ${shlibs:Depends}, ${misc:Depends}, ngcp-sipsak, uuid-runtime
 Description: mwi generator for NGCP platform
  This program generates mwi notifications for the NGCP voicemail system.
