wrap and sort items in Debian packaging files
This makes reviews and diffs easier and helps in avoiding duplicate entries.

devscripts's wrap-and-sort ftw.

Closes: https://bugtracker.sipwise.com/view.php?id=1845

From: Michael Prokop <mprokop@sipwise.com>

--- a/debian/control
+++ b/debian/control
@@ -8,6 +8,6 @@ Homepage: http://sipwise.com/
 
 Package: ngcp-vmnotify
 Architecture: all
-Depends: ${shlibs:Depends}, ${misc:Depends}, ngcp-sipsak, uuid-runtime
+Depends: ngcp-sipsak, uuid-runtime, ${misc:Depends}, ${shlibs:Depends}
 Description: mwi generator for NGCP platform
  This program generates mwi notifications for the NGCP voicemail system.
