MT#22363 depends on sipsak from backports
Change-Id: I6c71b7c545a75f9b6ae983bbae08e596951f1726

--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Homepage: http://sipwise.com/
 
 Package: ngcp-vmnotify
 Architecture: all
-Depends: ngcp-sipsak,
+Depends: sipsak (>= 0.9.6+git20160713),
          uuid-runtime,
          ${misc:Depends},
 Description: mwi generator for NGCP platform
