--- a/debian/rules
+++ b/debian/rules
@@ -30,6 +30,7 @@ install: build
 	dh_installdirs usr/bin  etc/ngcp-vmnotify
 
 	install -m 755 vmnotify		debian/ngcp-vmnotify/usr/bin/vmnotify
+	install -m 755 vmsmsnotify		debian/ngcp-vmnotify/usr/bin/vmsmsnotify
 	install -m 644 vmnotify.conf	debian/ngcp-vmnotify/etc/ngcp-vmnotify/vmnotify.conf
 	install -m 644 mwi.sip		debian/ngcp-vmnotify/etc/ngcp-vmnotify/mwi.sip
 
