--- a/debian/control
+++ b/debian/control
@@ -2,14 +2,16 @@ Source: ngcp-vmnotify
 Section: utils
 Priority: extra
 Maintainer: Sipwise Development Team <support@sipwise.com>
-Build-Depends: debhelper (>= 5)
-Standards-Version: 3.9.7
-Homepage: http://sipwise.com/
+Build-Depends:
+ debhelper (>= 9),
+Standards-Version: 3.9.8
+Homepage: https://www.sipwise.com/
 
 Package: ngcp-vmnotify
 Architecture: all
-Depends: sipsak (>= 0.9.6+git20160713),
-         uuid-runtime,
-         ${misc:Depends},
+Depends:
+ sipsak (>= 0.9.6+git20160713),
+ uuid-runtime,
+ ${misc:Depends},
 Description: mwi generator for NGCP platform
  This program generates mwi notifications for the NGCP voicemail system.
