TT#14809 cleanup vmnotify.conf for the new format, add EXT_NOTIFY
    * cleanup vmnotify.conf for the new format
    * add EXT_NOTIFY option (yes/no) to send external notifications

Change-Id: If422354744dfa026b10d36ce314118fb4f08427f

--- a/vmnotify.conf
+++ b/vmnotify.conf
@@ -1,8 +1,5 @@
-SERVER="127.0.0.1:5060"
-LOCAL_IP="127.0.0.1"
-FILE_DEBUG="0"
-CONSOLE_DEBUG="0"
-VERBOSE=""
-SIPSAK=`which sipsak`
-UUIDGEN=`which uuidgen`
+SERVER=127.0.0.1:5060
+LOCAL_IP=127.0.0.1
+DEBUG=0
 SIPFILE="/etc/ngcp-vmnotify/mwi.sip"
+EXT_NOTIFY=no
