TT#49150 Add missing dependencies
- Add missing perl:Depends substvar.
- Add dependencies for all perl modules used.

Change-Id: I1d5b279bcb7953845281ce5b94396ef230390fa5

--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,17 @@ Homepage: https://www.sipwise.com/
 Package: ngcp-vmnotify
 Architecture: all
 Depends:
+ libconfig-any-perl,
+ libdbd-mysql-perl,
+ libdbi-perl,
+ libio-socket-ssl-perl,
+ libjson-perl,
+ liblog-log4perl-perl,
+ libossp-uuid-perl,
+ libreadonly-perl,
+ ngcp-api-tools,
  sipsak (>= 0.9.6+git20160713),
  ${misc:Depends},
+ ${perl:Depends},
 Description: mwi generator for NGCP platform
  This program generates mwi notifications for the NGCP voicemail system.
