TT#53701 Switch to use the new libngcp-api-client-perl package
The ngcp-api-tools package got renamed.

Change-Id: I480a377d21dbf5de20a47b31e633c2da8e12e1b8

--- a/debian/control
+++ b/debian/control
@@ -16,9 +16,9 @@ Depends:
  libio-socket-ssl-perl,
  libjson-perl,
  liblog-log4perl-perl,
+ libngcp-api-client-perl | ngcp-api-tools,
  libossp-uuid-perl,
  libreadonly-perl,
- ngcp-api-tools,
  sipsak (>= 0.9.6+git20160713),
  ${misc:Depends},
  ${perl:Depends},
