TT#61101 Remove obsolete alternative dependencies
These have long been gone, time to cleanup.

Change-Id: I0e6ef00ba5012adc3f8d21060f31833bbe6872d5

--- a/debian/control
+++ b/debian/control
@@ -16,7 +16,7 @@ Depends:
  libio-socket-ssl-perl,
  libjson-perl,
  liblog-log4perl-perl,
- libngcp-api-client-perl | ngcp-api-tools,
+ libngcp-api-client-perl,
  libossp-uuid-perl,
  libreadonly-perl,
  sipsak (>= 0.9.6+git20160713),
