--- a/debian/control
+++ b/debian/control
@@ -1,5 +1,5 @@
 Source: ngcp-vmnotify
-Section: utils
+Section: comm
 Priority: optional
 Maintainer: Sipwise Development Team <support@sipwise.com>
 Build-Depends:
