MT#61074 Switch from obsolete libossp-uuid-perl to libuuid-perl
The libossp-uuid-perl implementation has seen no update since 2014, and
our primary UUID perl implementation is libuuid-perl. Switch to use
that.

This also fixes a problem with libossp-uuid-perl causing upgrade
problems for apt when libdata-uuid-perl is also installed, where we
depend on both from various of our projects.

Change-Id: I35083899db3a08c82ba52ab32747a8356c25b7d5

--- a/debian/control
+++ b/debian/control
@@ -18,8 +18,8 @@ Depends:
  libjson-perl,
  liblog-log4perl-perl,
  libngcp-api-client-perl,
- libossp-uuid-perl,
  libreadonly-perl,
+ libuuid-perl,
  sipsak (>= 0.9.6+git20160713),
  ${misc:Depends},
  ${perl:Depends},
